--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<properties>
 		<jackson-version>2.9.8</jackson-version>
 		<spring-version>4.2.3.RELEASE</spring-version>
-		<projectVersion>${version}</projectVersion>
+		<projectVersion>1.0</projectVersion>
 	</properties>
 	
 	<groupId>MOCKSERVICES.mockservices</groupId>
