--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<groupId>MOCKSERVICES.mockservices</groupId>
 	<artifactId>mock-services</artifactId>
-	<version>${projectVersion}</version>
+	<version>1.0</version>
 	<packaging>war</packaging>
 	
 	<build>
